                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 07-03-2006 changed: "Delete" option in the root share context menu to "Remove Source" for consistency
 - 07-03-2006 fixed: playlist caching
 - 07-03-2006 changed: files added to the musicdatabase with no artist or album set will be added to an artist/album "Unknown"
                       musicdatabase will be updated to version 1.5
                       This also fixes: some artists in music nav are not selectable
 - 07-03-2006 fixed: Multiple paths in XBoxMediaCenter.xml would mean games wouldn't be found from Kai.
 - 06-03-2006 added: <number> tag to label control (for display of numbers)
 - 06-03-2006 added: Skin.SetBool and Skin.Reset <onclick> functions.
 - 06-03-2006 changed: Per button <texturefocus> images in scrolling button scrollers only show when scrolling has completed.
 - 06-03-2006 fixed: auth http streams containing special characters( mplayer.dll )
 - 06-03-2006 updated: tinyxml to version 2.4.3
 - 06-03-2006 fixed: ms soundtrack directory showed two parent folder items
 - 06-03-2006 fixed: mem leak in ms soundtrack directory
 - 06-03-2006 fixed: cdda disc without cddb info shows only a tracknumber as label
 - 06-03-2006 fixed: [1345507] First track of CD Audio not playing on latest XBMC builds!
 - 06-03-2006 updated: Italian language file (Thnx to kotix)
 - 06-03-2006 updated: Chinese (Traditional) language file (Thnx to omenpica)
 - 06-03-2006 updated: German (Austrian) language file (Thnx to CEOMR)
 - 06-03-2006 updated: German language file
 - 06-03-2006 updated: Dutch language file (Thnx to console-ombouw)
 - 06-03-2006 updated: Portuguese (Brazil) language file (Thnx to mvbm)